samples/argo-rollout/canary/rollout.yaml
---
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: service-user
  namespace: service
spec:
  replicas: 1
  selector:
    matchLabels:
      type: service
      for: user
  template:
    metadata:
      labels:
        type: service
        for: user
    spec:
      containers:
        - name: user
          image: { imageURL }
          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: 200m
              memory: 512Mi
            limits:
              cpu: 200m
              memory: 512Mi
  strategy:
    canary:
      maxSurge: '25%' 
      maxUnavailable: 0 # 업데이트 될 때 사용할 수 없는 pod의 최대 수
      steps:
        - setWeight: 25 # 카나리로 배포된 서버로 전송해야될 트래픽 비율
        - pause: { duration: 1h } # AutoPromotion Time
---
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: service-products
  namespace: service
spec:
  replicas: 5
  selector:
    matchLabels:
      type: service
      for: products
  template:
    metadata:
      labels:
        type: service
        for: products
    spec:
      containers:
        - name: products
          image: { imageURL }
          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: 1
              memory: 1024Mi
            limits:
              cpu: 1
              memory: 1024Mi
  strategy:
    canary:
      maxSurge: '25%' 
      maxUnavailable: 0 # 업데이트 될 때 사용할 수 없는 pod의 최대 수
      steps:
        - setWeight: 25 # 카나리로 배포된 서버로 전송해야될 트래픽 비율
        - pause: { duration: 1h } # AutoPromotion Time
