samples/argo-rollout/canary/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: canary-ingress
  namespace: service
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
spec:
  ingressClassName: "nginx"
  rules:
  - host: argo-canary.itapi.org
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: rollout-canary-service
            port:
              number: 80
